# audiotame

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.cli  Dockerfile.gradio  MANIFEST.in  README.md  pyproject.toml  requirements.cli.txt  requirements.gradio.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: cliff.yml  containers-manual.yml  containers.yml  dependabot.yml  hf-sync.yml  pypi.yml
src/audiotame/: acx.py  app.py  audiotame.py  audiotame.sh  main.py
